# TabRefDetect

./: .gitignore  AGENTS.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  biaoge.json  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml
.github/workflows/: agent-tests.yml
API_client/: README.md
API_client/GLM/: GLM_API.py
API_client/Gemini/: Gemini_API.py
API_client/Qwen/: GLM_API.py  Qwen_API.py
API_client/Qwen3.5/: qwen3.5API.py
Code/: README.md
Code/MLLM_SciBERT/: README.md  build_scibert_cross_model_dataset.py  build_scibert_from_semantic_data.py  train_scibert_semantic.py
Code/MinerU_PageIndex_TableTree/: .gitignore  README.md  manifest.example.json  (+23 more)
TabRefError/: README.md  fold_0_train.json  fold_0_val.json  fold_1_train.json  fold_1_val.json  fold_2_train.json  fold_2_val.json  fold_3_train.json  fold_3_val.json  fold_4_train.json  fold_4_val.json
agent/tabref_context_agent/: .gitignore  README.md  config.example.json  pyproject.toml  requirements.txt
agent/tabref_context_agent/docs/: ARCHITECTURE.md  GENERATED_FILES.md  SELF_LEARNING.md  USAGE.md  V2_ROADMAP.md  agent_graph.mmd
agent/tabref_context_agent/scripts/: run_agent.ps1
agent/tabref_context_agent/src/tabref_agent/: __init__.py  cli.py  config.py  graph.py  learning.py  nodes.py  state.py  tools.py
agent/tabref_context_agent/tests/: test_config.py  test_graph.py  test_learning.py  test_review_prompt.py  test_routing.py
skill/: README.md
(+41 files in other folders)
